# gnome-citadel

./: .gitignore  .travis.yml  README.md  cabal.config  gnome-citadel.cabal  todo.org
bench/: AStarBench.hs  TaskScheduling.hs
bench/astar/: AStarBench.hs
bench/task-scheduling/: TaskScheduling.hs
example/: Coroutines.hs
src/: Actor.hs  Coords.hs  Coroutine.hs  Counter.hs  Level.hs  Path.hs  Path.hs.orig  Queue.hs  Renderable.hs  Scheduler.hs  StaticElement.hs  Task.hs  TaskManagement.hs  TestHelper.hs  TestTiles.hs  Tile.hs  Types.hs  Unfold.hs  Utils.hs
src/Control/: Coroutine.hs
src/Control/Coroutine/: Await.hs  AwaitYield.hs  Pipe.hs  Yield.hs
src/Level/: Command.hs  CommandScheduler.hs  Commands.hs  Scheduler.hs  Task.hs  Transformation.hs
src/Path/: Internal.hs
test/: CommandSpec.hs  CounterSpec.hs  ErrorTSpec.hs  HspecHelper.hs  LensSpec.hs  LevelSpec.hs  LevelTransSpec.hs  PathSpec.hs  PathSpec.hs.orig  QueueSpec.hs  SchedulerSpec.hs  SequenceSpec.hs  TaskManagerSpec.hs  TaskSpec.hs  TestHelper.hs  TestSpec.hs  TestTiles.hs  TilesSpec.hs  UnfoldSpec.hs
test/Game/: SDLTest.hs
ui/: Main.hs
