name:                  gnome-citadel
version:               0.2.0.0
-- synopsis:
-- description:
license:               GPL-3
license-file:          LICENSE
author:                Markus Hauck, Sven Keidel
maintainer:            svenkeidel at gmail dot com
category:              Game
build-type:            Simple
cabal-version:         >=1.8
data-files:            tiles/*.png

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     Tile,
                       Task,
                       Level,
                       Level.Transformation,
                       Level.Command,
                       Level.Task,
                       Actor,
                       Counter,
                       Renderable,
                       StaticElement,
                       Scheduler,
                       Unfold,
                       Queue,
                       Coords,
                       Path,
                       Path.Internal,
                       TaskManagement,
                       Utils,
                       TestHelper,
                       TestTiles
  Build-depends:       base ==4.*,
                       containers,
                       lens >= 4.4 && < 4.5,
                       mtl,
                       PSQueue,
                       transformers == 0.3.*,
                       data-default,
                       deepseq

executable gnome-citadel
  hs-source-dirs:      ui, test
  ghc-options:         -Wall -threaded
  Build-depends:       base ==4.*,
                       gnome-citadel,
                       vty >= 5.2 && < 5.3,
                       lens >= 4.4 && < 4.5,
                       data-default
  main-is:             Main.hs

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base ==4.*,
                       containers,
                       hspec >= 1.9,
                       gnome-citadel,
                       QuickCheck,
                       mtl,
                       lens >= 4.4 && < 4.5,
                       transformers == 0.3.*,
                       data-default == 0.5.*,
                       PSQueue == 1.1.*

benchmark a-star-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          AStarBench.hs
  build-depends:    base,
                    criterion,
                    gnome-citadel
  ghc-options:      -Wall
                    -O2

benchmark task-scheduling
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          TaskScheduling.hs
  build-depends:    base,
                    criterion,
                    gnome-citadel,
                    mtl,
                    lens
  ghc-options:      -Wall
                    -O2
