name:                  gnome-citadel
version:               0.2.0.0
-- synopsis:
-- description:
license:               GPL-3
license-file:          LICENSE
author:                Markus Hauck, Sven Keidel
maintainer:            svenkeidel at gmail dot com
category:              Game
build-type:            Simple
cabal-version:         >=1.8
data-files:            tiles/*.png

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     Actor
                     , Coords
                     , Counter
                     , Level
                     , Level.Command
                     , Level.Task
                     , Level.Transformation
                     , Path
                     , Path.Internal
                     , Queue
                     , Renderable
                     , Scheduler
                     , StaticElement
                     , Task
                     , TaskManagement
                     , TestHelper
                     , TestTiles
                     , Tile
                     , Unfold
                     , Utils
  Build-depends:       PSQueue
                     , base ==4.*
                     , containers
                     , data-default
                     , deepseq
                     , lens >= 4.4 && < 4.5
                     , mtl
                     , transformers == 0.3.*

executable gnome-citadel
  hs-source-dirs:      ui, test
  ghc-options:         -Wall -threaded
  Build-depends:       base ==4.*
                     , data-default
                     , gnome-citadel
                     , lens >= 4.4 && < 4.5
                     , vty >= 5.2 && < 5.3
  main-is:             Main.hs

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       PSQueue == 1.1.*
                     , QuickCheck
                     , base ==4.*
                     , containers
                     , data-default == 0.5.*
                     , gnome-citadel
                     , hspec >= 1.9
                     , lens >= 4.4 && < 4.5
                     , mtl
                     , transformers == 0.3.*

benchmark a-star-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/astar
  main-is:          AStarBench.hs
  build-depends:    base
                  , criterion
                  , gnome-citadel
  ghc-options:      -Wall
                    -O2

benchmark task-scheduling
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/task-scheduling
  main-is:          TaskScheduling.hs
  build-depends:    base
                  , criterion
                  , deepseq
                  , gnome-citadel
                  , lens
                  , mtl
  ghc-options:      -Wall
                    -O2
